inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/CSA_Inquiry_Element_Definition__c.object-meta.xml
<CustomObject>
    <label>Inquiry Element</label>
    <nameField>
        <displayFormat>CSA-IED-{0000}</displayFormat>
        <label>Inquiry Element Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>