inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/fields/Inquiry_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry Outcome</label>
    <referenceTo>CSA_Inquiry_Outcome__c</referenceTo>
    <relationshipLabel>Inquiry Elements</relationshipLabel>
    <relationshipName>Inquiry_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>