inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/fields/Inquiry_Template__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inquiry Template</label>
    <referenceTo>CSA_Inquiry_Template__c</referenceTo>
    <relationshipLabel>Inquiry Elements</relationshipLabel>
    <relationshipName>Inquiry_Elements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>