inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/fields/Next_Inquiry_Element__c.field-meta.xml
<CustomField>
    <fullName>Next_Inquiry_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Inquiry Element</label>
    <referenceTo>CSA_Inquiry_Element_Definition__c</referenceTo>
    <relationshipLabel>Inquiry Elements</relationshipLabel>
    <relationshipName>Inquiry_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>