inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/fields/Next_Question__c.field-meta.xml
<CustomField>
    <fullName>Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Question</label>
    <referenceTo>CSA_Question_Definition__c</referenceTo>
    <relationshipLabel>Inquiry Elements (Next Question)</relationshipLabel>
    <relationshipName>Inquiry_Elements1</relationshipName>
    <type>Lookup</type>
</CustomField>