inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/fields/Web_Content__c.field-meta.xml
<CustomField>
    <fullName>Web_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Content</label>
    <referenceTo>CSA_Web_Content__c</referenceTo>
    <relationshipLabel>Inquiry Elements</relationshipLabel>
    <relationshipName>Inquiry_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>