inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/fields/Web_Content_Title__c.field-meta.xml
<CustomField>
    <fullName>Web_Content_Title__c</fullName>
    <formula>Web_Content__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Content Title</label>
    <type>Text</type>
</CustomField>