inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <label>Question</label>
</RecordType>