inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/recordTypes/Resource.recordType-meta.xml
<RecordType>
    <fullName>Resource</fullName>
    <active>true</active>
    <label>Resource</label>
</RecordType>