inquirybuilder/force-app/main/default/objects/CSA_Inquiry_Element_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Next_Question__c</columns>
    <columns>Question_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>